Fixing mobile bugs (cursor position, scroll functionality, keyboard not showing in some cases)

--- a/css/titlebar.css
+++ b/css/titlebar.css
@@ -24,7 +24,7 @@
 	float: right;
 }
 #btnbar {
-	height: 42px;
+	height: 45px;
 	margin: 20px 0;
 
 	font-family: courier, monaco, monospace, consolas;
